deleted proxy and fixed router

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://waltribeiro.github.io/react-website-refactor",
+  "homepage": "https://waltribeiro.github.io/react-website",
   "name": "portfolio-site",
   "version": "0.1.0",
   "private": true,
